add qiaseq-smcounter-v2 module

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
 [submodule "qiaseq-smcounter-v2"]
 	path = qiaseq-smcounter-v2
-	url = https://github.com/qiaseq/qiaseq-smcounter-v2.git
+	url = git@github.com:fraferrero/qiaseq-smcounter-v2.git
 [submodule "qiaseq-smcounter-v1"]
 	path = qiaseq-smcounter-v1
 	url = https://github.com/qiaseq/qiaseq-smcounter-v1.git
-[submodule "read-trimmer"]
-	path = read-trimmer
-	url = https://github.com/qiaseq/read-trimmer.git
